<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_10ssp"
    android:paddingBottom="@dimen/_10ssp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_yes_no_txt_title"
        android:padding="@dimen/_10ssp"
        android:gravity="center"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:text="@string/do_you_want_to_delete_this_measurement_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_yes_no_btn_no"
            android:layout_margin="@dimen/_10ssp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_yes_no_btn_yes"
            android:layout_weight="1"
            android:layout_margin="@dimen/_10ssp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/bg_cancel"
            android:text="@string/yes"
            android:textColor="@color/red"
            android:textSize="@dimen/_11ssp" />

    </LinearLayout>
</LinearLayout>