<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_rcv_bac_setting_txt_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="@dimen/_20ssp"
            android:hint="@string/object_name_to_be_measured_up_to_5_alphanumeric_characters"
            android:textSize="@dimen/_10ssp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_rcv_bac_setting_edt_bac_name"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:maxLength="5"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            app:hintAnimationEnabled="false"
            android:hint="@string/e1_baseline_search_start_potential"
            android:textSize="@dimen/_10ssp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_rcv_bac_setting_edt_e1"
                android:text="0"
                android:inputType="numberSigned"
                android:maxLength="5"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            app:hintAnimationEnabled="false"
            android:hint="@string/e2_baseline_search_start_potential"
            android:textSize="@dimen/_10ssp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_rcv_bac_setting_edt_e2"
                android:text="0"
                android:inputType="numberSigned"
                android:maxLength="5"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            app:hintAnimationEnabled="false"
            android:hint="@string/e3_baseline_search_start_potential"
            android:textSize="@dimen/_10ssp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_rcv_bac_setting_edt_e3"
                android:text="0"
                android:inputType="numberSigned"
                android:maxLength="5"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            app:hintAnimationEnabled="false"
            android:hint="@string/e4_baseline_search_start_potential"
            android:textSize="@dimen/_10ssp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_rcv_bac_setting_edt_e4"
                android:text="0"
                android:inputType="numberSigned"
                android:maxLength="5"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_20ssp"-->
<!--            app:hintAnimationEnabled="false"-->
<!--            android:hint="@string/location_selectbox_up_down"-->
<!--            android:textSize="@dimen/_10ssp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/item_rcv_bac_setting_edt_pkp"-->
<!--                android:text="0"-->
<!--                android:maxLength="1"-->
<!--                android:inputType="number"-->
<!--                android:textSize="@dimen/_11ssp" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:background="@drawable/square_border_grey"
                android:orientation="vertical"
                android:padding="@dimen/_10ssp">


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/item_rcv_bac_setting_acp_pkp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/arrPkp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:background="@color/white"
                android:paddingStart="@dimen/_3ssp"
                android:paddingEnd="@dimen/_3ssp"
                android:text="@string/location_selectbox_up_down"
                android:textSize="@dimen/_10ssp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/item_rcv_bac_setting_container_setting_offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_rcv_bac_setting_txt_index_setting_offline"
                android:text="※微生物１のレベル表示設定"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20ssp"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_rcv_bac_setting_rcv_setting_offline"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/item_rcv_bac_setting_btn_add"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_gravity="center"
                android:background="@drawable/circle_bg_button_not_active"
                android:paddingLeft="@dimen/_5ssp"
                android:paddingEnd="@dimen/_10ssp"
                android:text="（＋）設定の追加"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>